# starsonata_code

./: .gitignore  Cargo.toml  analyze_rolls.ipynb  calc_ic_factories.ipynb  dps_mods.ipynb  link_wpcap.txt  tmp.html  tmp.ipynb  trade_bot_efficiency.ipynb
NF_tracker/: Cargo.toml
NF_tracker/src/: device.rs  main.rs
anatolia_influence_planet/: Cargo.toml
anatolia_influence_planet/src/: main.rs
aug_setup_calculation/: .gitignore  aug_setup_creator.py  calculate_rations.ipynb  class_SD_setups.ipynb  class_engineer_setups.ipynb  class_engineer_setups_2.ipynb  class_ranger_setups.ipynb  class_shm_setups.ipynb  class_zerk_setups.ipynb  class_zerk_setups.py  engineer_subset.xlsx  parsed_augmenters.csv  scrape_build.ipynb  sd_subset.xlsx  setup_calculator.ipynb
aug_setup_calculation/base_augs/: scrape.py
bot_test/: Cargo.toml
bot_test/src/: main.rs  schedule.rs
bot_test/src/runs/: mod.rs  time.rs
class_icons/: icon_base.xcf  icon_sd.xcf
dg_scanner/: .gitignore  Cargo.toml  README.md
dg_scanner/raw/: raw_dgs_kd.json
dg_scanner/src/: dg_data_sql.rs  lib.rs  main.rs  ss_api.rs  utils.rs
dg_scanner/src/utils/: device.rs  dg_data.rs  dg_data_sql.rs  dg_level.rs
energy_plotting/: scrape.ipynb
planet_scanner/: Cargo.toml
planet_scanner/raw/: data.txt
prod_logger/: Cargo.toml  README.md  update_perms.sh
prod_logger/config/: config.toml
prod_logger/src/: config.rs  device.rs  lib.rs  main.rs  ss_client_interaction.rs  station_interaction.rs
run_ss_test/: Cargo.toml
run_ss_test/src/: main.rs
ships/: RedRogueAll.xcf  RedRogueAll_blackgold.xcf  RedRogueAll_blackgold_glow.xcf  RedRogueAll_blackgold_nm.xcf  Resplendent_Nullifier.xcf  Resplendent_Nullifier_2.xcf  Resplendent_Nullifier_Glow.xcf  Resplendent_Nullifier_Glow_2.xcf  Resplendent_Nullifier_Glow_dark.xcf  Resplendent_Nullifier_Glow_red.xcf  Resplendent_Nullifier_dark.xcf  Resplendent_Nullifier_neon.xcf  Resplendent_Nullifier_neon_glow.xcf  Resplendent_Nullifier_neon_nm.xcf  Resplendent_Nullifier_red.xcf  Shrimp_flat.xcf  Shrimp_glow.xcf  nullifier_texture_check.blend  nullifier_texture_check.blend1  pax_bisarme.blend  pax_bisarme.blend1  prawn_shrimp.blend  prawn_shrimp.blend1  prawn_shrimp.xcf  rb_rogue.blend  rb_rogue.blend1  skull.xcf  voulge.xcf
shop_manager/: .gitignore  Cargo.toml
shop_manager/src/: main.rs
src/: main.rs
