[package]
name = "bot_test"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
config = "0.15.21"
indexmap = "2.13.1"
poise = "0.6.1"
serde = "1.0.228"
serenity = "0.12.5"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
