[package]
name = "dg_scanner"
version = "0.2.0"
edition = "2024"

[profile.release]
debug = false
strip = true
opt-level = "z"
codegen-units = 1
lto = true

[dependencies]
connectorx = { version = "0.4.2", features = ["src_sqlite", "dst_polars"] }
ctrlc = "3.4.5"
once_cell = "1.20.2"
pcap = "2.2.0"
polars = { version = "0.45.1", features = ["polars-io", "pivot", "regex", "strings", "lazy", "range", "polars-ops", "json", "cum_agg", "is_in"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
rusqlite = { version = "*", features = ["bundled"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
