[package]
name = "run_ss_test"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.19"
enigo = "0.6.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
